syntax = "proto3";

package temporalservice;

import "google/api/annotations.proto";

option go_package = ".;temporalservice";

// Definition of the temporal service interface.
service TemporalService {
    // Tag timexs in the given text..
    rpc TagTimex(TagTimexRequest) returns (stream TimexTag) {
        option (google.api.http) = {
            post: "/tag"
            body: "*"
        };
    };

    // Convert the given timex to an abolute date time.
    rpc TimexToAbsolute(TimexToAbsoluteRequest) returns (TimexToAbsoluteResponse) {
        option (google.api.http) = {
            post: "/absolute",
            body: "*"
        };
    };
}

message TagTimexRequest {
    // Text to tag the timexes in.
    string text = 1;
}

message TimexTag {
    // Timex being tagged.
    string timex = 1;
    // Position the timex starts at in the text.
    int32 pos = 2;
}

message TimexToAbsoluteRequest {
    // Timex to convert to an absolute time.
    string timex = 1;
    // Time to ground from (i.e. current time)
    int64 baseTime = 2;
}

message TimexToAbsoluteResponse {
    // Timex given in the request.
    string input = 1;
    // Unix timestamp of the absolute time for the given timex input.
    int64 absoluteDateTime = 2;
}